# wordpress-rss-archiver

./: .gitignore  README.md  pyproject.toml
legacy/: boom.py  rss2markdown.py
wordpress_rss_archiver/: wordpress_rss_archiver.py
wordpress_rss_archiver/utils/: requests_patch.py  spn2.py
